# node-exec

./: .ackrc  .editorconfig  .gitignore  .prettierignore  .tool-versions  Cargo.toml  LICENSE.txt  README.md  exec.d.ts  exec.js  index.d.ts  index.js  index2.js  package-lock.json  package.json  tsconfig.json  variants.json
.github/workflows/: CI.yml  build.yml  lint.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
scripts/: build-packages.mjs
src/: lib.rs
tests/: exec.js  exec.spec.js  index.spec.js
