[package]
authors = ["Simon Oulevay <rust@alphahydrae.com>"]
edition = "2021"
name    = "node-exec"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
nix = { version = "0.29", features = ["fs", "process"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
